@@ -18,10 +18,10 @@ ChangeLog for PyLint
       'disable-all' inline directive in favour of 'skip-file' (patch by
       A.Fayolle)
 
-    * #110840: Add messages I0020 and I0021 for reporting of suppressed messages
+    * #110840: add messages I0020 and I0021 for reporting of suppressed messages
       and useless suppression pragmas. (patch by Torsten Marek)
 
-    * #112728: Add warning E0604 for non-string objects in __all__
+    * #112728: add warning E0604 for non-string objects in __all__
       (patch by Torsten Marek)
 
     * #113231: logging checker now looks at instances of Logger classes
@@ -31,6 +31,13 @@ ChangeLog for PyLint
       which is not octal in Python (patch by Martin Pool)
 
 --
+    * Python 3 related changes:
+
+      * #110213: fix import of checkers broken with python 3.3, causing
+        "No such message id W0704" breakage
+
+      * #120635: redefine cmp function used in pylint.reporters
+
     * #115580: fix erroneous W0212 (access to protected member) on super call
       (patch by Martin Pool)
 
